--- a/GhostHost/styles.css
+++ b/GhostHost/styles.css
@@ -255,6 +255,7 @@ input[type="text"] {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: center;
 	position: relative;
 	top: -285px;
@@ -262,19 +263,53 @@ input[type="text"] {
 
 .packages-plan div {
 	display: block;
-	border: 1px solid black;
 	margin: 30px;
 	width: 255px;
 	height: 565px;
 	background-color: white;
+	box-shadow: 0 0 15px rgba(35,35,35,0.3);
 }
 
+.packages-plan div:nth-child(1) {
+	border-top: 5px solid #f9d423;
+}
 
+.packages-plan div:nth-child(2) {
+	border-top: 5px solid #7f8c8d;
+}
 
+.packages-plan div:nth-child(3) {
+	border-top: 5px solid #f85f40;
+}
 
+.packages-plan div:nth-child(4) {
+	border-top: 5px solid #1abc9c;
+}
 
+.package-table {
+	width: 195px;
+	margin: 30px;
+	margin-top: 20px;
+	font-family: Lato Thin;
+	font-size: 1.1em;
+}
 
+.package-table td {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
 
+.package-table tr:first-child td {
+	border-bottom: 0.5px solid #d9d9d9;
+	color: #727272;
+	text-align: center;
+	padding-bottom: 0px;
+}
+
+.package-table h3 {
+	font-family: Lato Heavy;
+	font-size: 1em;
+}
 
 
 
